# rspack-binding-demo

./: .gitignore  CHUNKS_FEATURE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  taplo.toml
.cargo/: config.toml
.github/: renovate.json
.github/workflows/: ci.yml  release.yml  test.yml
crates/binding/: Cargo.toml  index.d.ts  index.js  package.json  tsconfig.json
crates/binding/src/: lib.rs  plugin.rs
examples/use-plugin/: build.js  package.json
examples/use-plugin/src/: index.js
lib/: index.d.ts  index.js
