[package]
edition.workspace = true
name              = "binding"
publish           = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rspack_binding_builder        = { workspace = true }
rspack_binding_builder_macros = { workspace = true }

rspack_core    = { workspace = true }
rspack_error   = { workspace = true }
rspack_hook    = { workspace = true }
rspack_sources = { workspace = true }

napi        = { workspace = true, features = ["async", "tokio_rt", "serde-json", "anyhow", "napi7", "compat-mode"] }
napi-derive = { workspace = true, features = ["compat-mode"] }

# Enable SWC plugin feature for targets that support it
# Skip: wasm32-wasip1-threads, i686-pc-windows-msvc, aarch64-pc-windows-msvc, armv7-linux-androideabi, armv7-unknown-linux-gnueabihf
[target.'cfg(not(any(target_arch = "wasm32", target_arch = "arm", all(target_os = "windows", target_arch = "x86"), all(target_os = "windows", target_arch = "aarch64"))))'.dependencies]
rspack_binding_builder = { workspace = true, features = ["plugin"] }

[build-dependencies]
rspack_binding_build = { workspace = true }
